--- a/FullPorfolio.html
+++ b/FullPorfolio.html
@@ -9,7 +9,7 @@
 <body>
     <div class="navbar">
         <a href="./index.html">Home</a>
-        <a href="./assets/emacs_refcard copy.pdf" target="_blank">Resume</a>
+        <a href="./assets/Oct24_Resume_krystaparker.pdf" target="_blank">Resume</a>
         <a href="#contact">Contact</a>
     </div>
     <h2>Portfolio</h2>
