--- a/FullPorfolio.html
+++ b/FullPorfolio.html
@@ -13,6 +13,10 @@
         <a href="#contact">Contact</a>
     </div>
     <h2>Portfolio</h2>
+
+    <div class="card"> hey
+        
+    </div>
     
 </body>
 <footer id="contact"></footer>
