added graduation goals

--- a/ODU-Reflection.html
+++ b/ODU-Reflection.html
@@ -30,7 +30,13 @@
           
           <p class="text-indent">Through my studies, I discovered a passion for creating applications capable of performing diverse functions. Now, when I encounter apps, websites, or devices, I find myself thinking about how I could design and develop them on my own. 
             One of the most challenging aspects of my journey has been realizing how far ahead some of my classmates are, which can sometimes feel discouraging.
-            If I could start over, I would begin creating projects earlier to enjoy the process more and avoid rushing to showcase my skills now. Starting earlier would have also allowed me to ask more questions and gain valuable insights from the teachers I had access to.</p></p>
+            If I could start over, I would begin creating projects earlier to enjoy the process more and avoid rushing to showcase my skills now. Starting earlier would have also allowed me to ask more questions and gain valuable insights from the teachers I had access to.</p>
+
+            <p class="text-indent">Before graduating, my primary goal is to secure an internship. 
+                If that doesn’t happen, securing one will be my first priority after graduation. 
+                Following the internship, I aim to explore career paths in Software Engineering, Cybersecurity, or Data Science. 
+                My plan is to spend approximately five years in each field to determine which I enjoy the most. 
+                In addition to my main career, I also aspire to continue working on side projects focused on game design and application development.</p>
           </div>
     </section>
     
